<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/booking_background"
    tools:context="com.example.skolen.hotelapplikasjon.Customer.BookingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/booking"
            android:text="@string/booking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/customerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />

        <TextView
            android:textSize="20sp"
            android:id="@+id/mobile"
            android:text="@string/mobile"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            />

        <EditText
            android:id="@+id/customerMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            />

        <TextView
            android:id="@+id/email"
            android:textSize="20sp"
            android:text="@string/email"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            />

        <EditText
            android:id="@+id/customerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:textSize="20sp"
            android:id="@+id/room_number"
            android:text="@string/room_number"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            />

        <EditText
            android:id="@+id/customerRoom"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:textSize="20sp"
            android:id="@+id/checkinDate"
            android:text="@string/checkinDate"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            />

        <EditText
            android:id="@+id/fromDate"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:textSize="20sp"
            android:id="@+id/checkoutDate"
            android:text="@string/checkoutDate"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            />

        <EditText
            android:id="@+id/toDate"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:text="@string/check_in_button"
            android:id="@+id/check_in_button"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>



</RelativeLayout>
