<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    tools:context="com.example.skolen.hotelapplikasjon.Customer.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/user_Login"
            android:text="@string/user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/background_light"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:text="@string/email"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/UserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:text="@string/password"
            android:textColor="@android:color/background_light"

            android:textSize="20sp"/>

        <EditText
            android:id="@+id/userPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/sign_up_here"
            android:text="@string/sign_up_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/background_light"/>

    </LinearLayout>

</RelativeLayout>

